[tool.poetry]
name = "inhouse-lab"
version = "0.1.0"
description = "Spawn test environments with vms."
authors = ["Thomas Steinert <hello@chroni.cc>"]
readme = "README.md"
license = "MIT"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
